--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.ActivoFijo.Af_Activo_fijo_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de activos fijos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,12 +11,14 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <a class="btn btn-primary" href="@Url.Action("Importar","ActivoFijo",new { Area = "ActivoFijo", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
 
-    @Html.Action("GridViewPartial_activo_fijo")
+    @Html.Action("GridViewPartial_activo_fijo", new { Nuevo = ViewBag.Nuevo })
 
 }
