--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/AreaAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/AreaAF/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.ActivoFijo.Af_Area_Info
 @{
     ViewBag.Title = "Consultas de áreas de activo fijo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,9 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_area_af")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_area_af", new { Nuevo = ViewBag.Nuevo })
 
 }
 
