--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/AreaAF/_GridViewPartial_area_af.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/AreaAF/_GridViewPartial_area_af.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_area_af";
-        settings.CallbackRouteValues = new { Controller = "AreaAF", Action = "GridViewPartial_area_af" };
+        settings.CallbackRouteValues = new { Controller = "AreaAF", Action = "GridViewPartial_area_af", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdArea";
         settings.Width = Unit.Percentage(100);
 
@@ -55,20 +55,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea")}) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea")},
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -104,7 +102,7 @@
                 }
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
