--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Anular.cshtml
@@ -16,9 +16,10 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                <label for="IdArea">Area*</label>
-                @Html.HiddenFor(q => q.IdArea)
-                @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
+                <div class="form-group">
+                    <label for="IdArea">Area*</label>
+                    @Html.HiddenFor(q => q.IdArea)
+                    @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
                {
                    settings.Name = "IdArea";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -35,7 +36,8 @@
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                    settings.ReadOnly = true;
                }).BindList(ViewBag.lst_area).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
@@ -54,7 +56,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index","DepartamentoAF", new { Area = "ActivoFijo"  },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","DepartamentoAF", new { IdArea = Model.IdArea, Area = "ActivoFijo"  },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
