--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Nuevo.cshtml
@@ -16,7 +16,8 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                <label for="IdArea">Area*</label>
+                <div class="form-group">
+                    <label for="IdArea">Area*</label>
                     @Html.HiddenFor(q => q.IdArea)
                     @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
                {
@@ -38,6 +39,7 @@
                     @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
                 </div>
             </div>
+            </div>
         </div>
 
     <div class="row">
@@ -54,7 +56,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","DepartamentoAF", new { Area = "ActivoFijo"  },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","DepartamentoAF", new { IdArea = Model.IdArea, Area = "ActivoFijo"  },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
