--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/_GridViewPartial_departamento_af.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/_GridViewPartial_departamento_af.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_departamento_af";
-        settings.CallbackRouteValues = new { Controller = "DepartamentoAF", Action = "GridViewPartial_departamento_af", IdArea = ViewBag.IdArea };
+        settings.CallbackRouteValues = new { Controller = "DepartamentoAF", Action = "GridViewPartial_departamento_af", IdArea = ViewBag.IdArea, Nuevo = ViewBag.Nuevo };
 
 
         settings.KeyFieldName = "IdDepartamento";
@@ -64,20 +64,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdArea = ViewBag.IdArea }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdArea = ViewBag.IdArea }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -96,6 +94,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
